#===============================================================================
# Makefile.am : for automake
# #===============================================================================
#
noinst_DATA = \
	1cfd.pdb

noinst_SCRIPTS = \
	test0.sh \
	test1.sh

EXTRA_DIST = $(noinst_DATA) $(noinst_SCRIPTS)

TESTS = $(noinst_SCRIPTS)

