#===============================================================================
# Makefile.am : for automake
# #===============================================================================
#
noinst_DATA = \
	1cfd.pdb \
	3uq4.pdb \
	1f3r.pdb

noinst_SCRIPTS = \
	test0.sh \
	test1.sh \
	test2.sh \
	test3.sh

EXTRA_DIST = $(noinst_DATA) $(noinst_SCRIPTS)

TESTS = $(noinst_SCRIPTS)

